--- a/stories/manifest.json
+++ b/stories/manifest.json
@@ -1,4 +1,5 @@
 [
   { "id": "aesop_02", "title": "The Tortoise and the Hare", "level": 1, "file": "tortoise-hare.json" },
-  { "id": "aesop_03", "title": "The Lion and the Mouse", "level": 1, "file": "lion-mouse.json" }
+  { "id": "aesop_03", "title": "The Lion and the Mouse", "level": 1, "file": "lion-mouse.json" },
+  { "id": "aesop_04", "title": "The Hungry Lizard", "level": 1, "file": "the_hungry_lizard.json" }
 ]
